// vim: tabstop=2 shiftwidth=2 softtabstop=2 smarttab expandtab autoindent

= Tackler-NG: Changelog

== Releases

=== Tackler release XX.YY.Z

==== New features and changes

New features:

* New output format JSON
  ** Optional configuration key `report.formats` to specify output formats.

Changed functionality:

* Change and Add more information to the "Git Storage" metadata
  ** New fields: "author", "date"
  ** Fix name of "message" to "subject" (the content of that field has been git subject all the time)
  ** Change field "suffix" to "extension", don't print the '.'
  ** Change the order of fields (move commit after extension)

* Change default allocator
  ** Replace `tikv-jemallocator` with `mimalloc`
     *** Mimalloc is available on Linux, Windows and MacOS
     *** It's ~20% faster on Linux and Windows, but on MacOS difference is only about 5%
     *** Memory usage increases about 30% an all platforms
* Reject unknown configuration keys


==== Fixes

Fixes in this release ...


==== Development

Updated dependencies (major or minor version):

* ...

===== Rust toolchain

Rust Edition:: 2024
MSRV:: 1.85.0

==== Release Artifacts

[cols="1,2",width=50%]
|===
|Component    | Version

|Tackler CLI  | TODO: XX.YY.Z
|tackler-core | TODO: No changes
|tackler-api  | TODO: No changes
|tackler-rs   | TODO: No changes
|===


'''

=== Tackler release 25.04.2

==== New features and changes

New features:

* New flat balance report option for Balance and Balance Group Reports
  ** link:https://github.com/tackler-ng/tackler/blob/main/docs/tep/tep-1016.adoc[TEP-1016]
  ** link:https://tackler.e257.fi/docs/report-balance/[Flat Balance] report
  ** link:https://tackler.e257.fi/docs/report-balance-group/[Flat Balance Group] report

Changed functionality:

* New optional configuration key `report.balance.type` and `report.balance-group.type`,
  default is tackler's original balance report type tree.


==== Fixes

None

==== Development

No major updates


===== Rust toolchain